--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -23,6 +23,11 @@
         "prettier"
     ],
     "rules": {
+      "class-methods-use-this":"off",
+      "@typescript-eslint/camelcase":"off",
+      "@typescript-eslint/no-unused-vars": ["error",{
+        "argsIgnorePattern":"_"
+      }],
       "import/extensions": [
         "error",
         "ignorePackages",
