--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "build": "tsc",
     "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.7",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.4",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "eslint": "6.8.0",
@@ -22,8 +26,15 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.16.1",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
+    "pg": "^8.5.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.29",
     "uuidv4": "^6.2.5"
   }
 }
